--- a/itschool/.classpath
+++ b/itschool/.classpath
@@ -33,6 +33,6 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/IT/Desktop/JSP/사용/lombok/lombok.jar"/>
+	<classpathentry kind="lib" path="C:/Users/IT/Desktop/lombok.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
